--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcsh 'Columbia River -- History'
 - !lcsh 'Columbia River'
 - !lcc 'F850.5'
+- GITenberg
 title: 'The Columbia River: Its History, Its Myths, Its Scenery, Its Commerce'
 url: http://www.gutenberg.org/ebooks/39388
